--- a/res/layout/confirm_data.xml
+++ b/res/layout/confirm_data.xml
@@ -30,11 +30,14 @@
                 />
 
             <TextView
-                app:layout_column="1"
-                app:layout_row="1"
                 android:id="@+id/inlet"
+                style="@style/inputNumbers"
+                app:layout_column="1"
                 app:layout_gravity="fill_horizontal"
-                style="@style/inputNumbers" />
+                app:layout_row="1"
+                android:gravity="center_vertical"
+                android:text="canegonfio"
+               />
 
             <TextView
                 app:layout_column="2"
@@ -260,10 +263,10 @@
            <Button
                     app:layout_column="1"
                     app:layout_row="11"
-                    android:id="@+id/btnSubmit"
+                    android:id="@+id/btnCalculate"
                     android:ems="5"
                     app:layout_gravity="fill_horizontal"
-                    android:text="@string/confirm" />
+                    android:text="@string/calculate" />
 
 
 </android.support.v7.widget.GridLayout>
