--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -19,6 +19,7 @@
 
     <style name="inputNumbers">
        <item name="android:layout_height">40dp</item>
+       <item name="android:gravity">center_vertical</item>
     </style>
     
     <style name="inputLabel">
