--- a/res/layout/activity_steel_drawing.xml
+++ b/res/layout/activity_steel_drawing.xml
@@ -2,12 +2,14 @@
 <android.support.v7.widget.GridLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="fill_parent"
         android:useDefaultMargins="true"
         android:layout_margin="3dp"
-        app:columnCount="3"
-        app:rowCount="7">
+        app:columnCount="4"
+        app:rowCount="7"
+        android:layout_gravity="center_horizontal"
+        >
         
             <TextView
                 app:layout_columnSpan = "3"
@@ -18,14 +20,16 @@
                 android:textSize = "25sp"
                 android:gravity = "center"
                 android:layout_margin = "5dp"
+                
                 />
         
           <TextView
                 app:layout_column="0"
                 app:layout_row="1"
                 style="@style/inputLabel"
-                android:text="@string/inlet" 
-                app:layout_gravity="center_vertical"
+                android:text="@string/inlet"
+                app:layout_gravity="fill_vertical|fill_horizontal"
+                
                 />
 
             <EditText
@@ -42,14 +46,16 @@
                 app:layout_row="1"
                 style="@style/measure"
                 android:text="mm" 
-                app:layout_gravity="center_vertical"/>
+                app:layout_gravity="fill_vertical|fill_horizontal"
+                />
 
             <TextView
                 app:layout_column="0"
                 app:layout_row="2"
                 style="@style/inputLabel"
-                android:text="@string/outlet" 
-                app:layout_gravity="center_vertical"/>
+                android:text="@string/outlet"
+                 app:layout_gravity="fill_vertical|fill_horizontal"
+                />
 
             <EditText
                 app:layout_column="1"
@@ -66,18 +72,17 @@
                 app:layout_row="2"
                 style="@style/measure"
                 android:text="mm"
-                app:layout_gravity="center_vertical"/>
+                app:layout_gravity="fill_vertical|fill_horizontal"/>
 
             <TextView
                 style="@style/inputLabel"
                 app:layout_column="0"
                 app:layout_row="3"
                 android:text="@string/n_of_dies" 
-                app:layout_gravity="center_vertical"
+                 app:layout_gravity="fill_vertical|fill_horizontal"
                 />
 
             <Spinner
-                android:layout_height="100dp"
                 app:layout_column="1"
                 app:layout_row="3"
                 android:id="@+id/n_of_dies"
@@ -91,18 +96,17 @@
                 app:layout_row="3"
                 style="@style/measure"
                 android:text="N°"
-                app:layout_gravity="center_vertical"
+                app:layout_gravity="fill_vertical|fill_horizontal"
                  />
 
            <TextView
                style="@style/inputLabel"
                app:layout_column="0"
                app:layout_row="4"
-               app:layout_gravity="center_vertical"
+               app:layout_gravity="fill_vertical|fill_horizontal"
                android:text="@string/carbon_content" />
            
             <Spinner
-                android:layout_height="100dp"
                 app:layout_column="1"
                 app:layout_row="4"
                 app:layout_gravity="fill_horizontal"
@@ -116,7 +120,7 @@
                 app:layout_row="4"
                 style="@style/measure"
                 android:text="#" 
-                app:layout_gravity="center_vertical"
+                app:layout_gravity="fill_vertical|fill_horizontal"
                 />
 
 
@@ -125,7 +129,7 @@
                 app:layout_row="5"
                 style="@style/inputLabel"
                 android:text="@string/target_speed"
-                app:layout_gravity="center_vertical" 
+                app:layout_gravity="fill_vertical|fill_horizontal" 
                />
 
             <EditText
@@ -142,10 +146,15 @@
                 app:layout_row="5"
                 style="@style/measure"
                 android:text="m/s" 
-                app:layout_gravity="center_vertical"
+                app:layout_gravity="fill_vertical|fill_horizontal"
                 />
 
-      
+            <android.support.v7.widget.Space
+               app:layout_column="3"
+               app:layout_row="0"
+               app:layout_rowSpan="6"
+               app:layout_gravity="fill"
+               />
 
            <Button
                     app:layout_column="1"
