--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources xmlns:android="http://schemas.android.com/apk/res/android">
+<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <!--
         Base application theme, dependent on API level. This theme is replaced
@@ -18,21 +18,36 @@
     </style>
 
     <style name="inputNumbers">
+       
        <item name="android:layout_height">40dp</item>
+       <item name="android:layout_width">200dp</item>
        <item name="android:gravity">center_vertical</item>
+       
     </style>
     
-    <style name="inputLabel">
+    <style name="inputLabel" >
+         <item name="android:background">@color/Blue</item>
+        <item name="android:gravity">left|center_vertical</item> 
+        <item name="android:textColor">@color/White</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textStyle">bold</item> 
+        <item name="android:padding">10dp</item>
     </style>
     
     <style name="confirmValue">
-        <item name="android:padding">5dp</item>
-         <item name="android:gravity">center</item>
+        <item name="android:padding">10dp</item>
+         <item name="android:gravity">left|center_vertical</item>
+        
     </style>
     
      <style name="measure">
-         <item name="android:padding">5dp</item>
-         <item name="android:gravity">center</item>
+        <item name="android:background">@color/Blue</item>
+        <item name="android:gravity">left|center_vertical</item> 
+        <item name="android:textColor">@color/White</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textStyle">bold</item> 
+        <item name="android:padding">10dp</item>
+        <item name="android:layout_width">wrap_content</item>
     </style>
     
      
