--- a/res/layout/activity_steel_drawing.xml
+++ b/res/layout/activity_steel_drawing.xml
@@ -39,7 +39,8 @@
                 app:layout_gravity="fill_horizontal"
                 android:inputType="numberDecimal"
                 android:text="1"
-                style="@style/inputNumbers" />
+                style="@style/inputNumbers"
+                />
 
             <TextView
                 app:layout_column="2"
@@ -87,7 +88,6 @@
                 app:layout_row="3"
                 android:id="@+id/n_of_dies"
                 style="@style/inputNumbers"
-                android:layout_width="wrap_content"
                 app:layout_gravity="fill_horizontal"
                 />
 
