--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -21,7 +21,8 @@
        
        <item name="android:layout_height">40dp</item>
        <item name="android:layout_width">200dp</item>
-       <item name="android:gravity">center_vertical</item>
+       <item name="android:gravity">center</item>
+       
        
     </style>
     
