--- a/res/layout/confirm_data.xml
+++ b/res/layout/confirm_data.xml
@@ -1,284 +1,298 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_height="fill_parent" >
 
-<android.support.v7.widget.GridLayout
-        
+    <android.support.v7.widget.GridLayout
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:useDefaultMargins="true"
-        android:layout_margin="3dp"
-        app:columnCount="4"
-        app:rowCount="12"
         android:layout_gravity="center_horizontal"
-        >
-        
-            <TextView
-                app:layout_columnSpan = "3"
-                app:layout_gravity = "fill_horizontal"
-                app:layout_row = "0"
-                android:text = "@string/dieschedule" 
-                android:textStyle = "bold"
-                android:textSize = "25sp"
-                android:gravity = "center"
-                android:layout_margin = "5dp"
-                />
-        
-          <!-- INLET  -->
-          <TextView
-                app:layout_column="0"
-                app:layout_row="1"
-                style="@style/confirmValue"
-                android:text="@string/inlet" 
-                app:layout_gravity="fill_vertical|fill_horizontal"
-                />
+        android:layout_margin="3dp"
+        android:useDefaultMargins="true"
+        app:columnCount="4"
+        app:rowCount="12" >
+
+        <TextView
+            android:layout_margin="5dp"
+            app:layout_columnSpan="3"
+            app:layout_gravity="fill_horizontal"
+            app:layout_row="0"
+            android:gravity="center"
+            android:text="@string/dieschedule"
+            android:textSize="25sp"
+            android:textStyle="bold" />
+
+        <!-- INLET -->
+
+        <LinearLayout
+            style="@style/leftColumnLayout"
+            app:layout_column="0"
+            app:layout_row="1"
+            app:layout_gravity="fill_horizontal"
+            android:orientation="vertical" >
 
             <TextView
-                android:id="@+id/inlet"
-                style="@style/inputNumbers"
-                app:layout_column="1"
-                app:layout_gravity="fill_horizontal"
-                app:layout_row="1"
-               />
+                style="@style/inputLabel"
+                android:gravity="bottom|right"
+                android:padding="0dp"
+                android:text="@string/inlet" />
 
             <TextView
-                app:layout_column="2"
-                app:layout_row="1"
                 style="@style/measure"
-                android:text="mm" 
-                app:layout_gravity="fill_vertical|fill_horizontal"/>
+                android:gravity="top|right"
+                android:padding="0dp"
+                android:text="mm" />
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/inlet"
+            style="@style/inputNumbers"
+            app:layout_column="1"
+            app:layout_gravity="fill"
+            app:layout_row="1"
+           />
+
+        <!-- OUTLET -->
+
+        <LinearLayout
+            style="@style/leftColumnLayout"
+            app:layout_column="0"
+            app:layout_row="2"
+            app:layout_gravity="fill_horizontal"
+            android:orientation="vertical" >
 
             <TextView
-                app:layout_column="0"
-                app:layout_row="2"
-                style="@style/confirmValue"
-                android:text="@string/outlet" 
-                app:layout_gravity="fill_vertical|fill_horizontal"/>
+                style="@style/inputLabel"
+                android:text="@string/outlet" />
 
             <TextView
-                app:layout_column="1"
-                app:layout_row="2"
-                app:layout_gravity="fill_horizontal"
-                android:id="@+id/outlet"
-                style="@style/inputNumbers" />
-
-            <TextView
-                app:layout_column="2"
-                app:layout_row="2"
                 style="@style/measure"
-                android:text="mm"
-                app:layout_gravity="fill_vertical|fill_horizontal"/>
+                android:text="mm" />
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/outlet"
+            style="@style/inputNumbers"
+            app:layout_column="1"
+            app:layout_gravity="fill"
+            app:layout_row="2" />
+
+        <!-- NOFDIES -->
+
+        <LinearLayout
+            style="@style/leftColumnLayout"
+            app:layout_column="0"
+            app:layout_row="3"
+            app:layout_gravity="fill_horizontal"
+            android:orientation="vertical" >
 
             <TextView
-                style="@style/confirmValue"
-                app:layout_column="0"
-                app:layout_row="3"
-                android:text="@string/n_of_dies" 
-                app:layout_gravity="fill_vertical|fill_horizontal"
-                />
+                style="@style/inputLabel"
+                android:text="@string/n_of_dies" />
 
             <TextView
-                app:layout_column="1"
-                app:layout_row="3"
-                android:id="@+id/n_of_dies"
-                style="@style/inputNumbers"
-                android:layout_width="wrap_content"
-                app:layout_gravity="fill_horizontal"
-                />
-
-            <TextView
-                app:layout_column="2"
-                app:layout_row="3"
                 style="@style/measure"
-                android:text="N°"
-                app:layout_gravity="fill_vertical|fill_horizontal"
-                 />
+                android:text="N°" />
+        </LinearLayout>
 
-           <TextView
-               style="@style/confirmValue"
-               app:layout_column="0"
-               app:layout_row="4"
-               app:layout_gravity="fill_vertical|fill_horizontal"
-               android:text="@string/carbon_content" />
-           
-            <TextView
-                app:layout_column="1"
-                app:layout_row="4"
-                app:layout_gravity="fill_horizontal"
-                android:id="@+id/carbon_content"
-                style="@style/inputNumbers" 
-                android:layout_width="wrap_content"
-                />
+        <TextView
+            android:id="@+id/n_of_dies"
+            style="@style/inputNumbers"
+            app:layout_column="1"
+            app:layout_gravity="fill"
+            app:layout_row="3" />
+
+        <!-- CarbonContent -->
+
+        <LinearLayout
+            style="@style/leftColumnLayout"
+            app:layout_column="0"
+            app:layout_row="4"
+            app:layout_gravity="fill_horizontal"
+            android:orientation="vertical" >
 
             <TextView
-                app:layout_column="2"
-                app:layout_row="4"
+                style="@style/inputLabel"
+                android:text="@string/carbon_content" />
+
+            <TextView
                 style="@style/measure"
-                android:text="#" 
-                app:layout_gravity="fill_vertical|fill_horizontal"
-                />
+                android:text="#" />
+        </LinearLayout>
 
+        <TextView
+            android:id="@+id/carbon_content"
+            style="@style/inputNumbers"
+            android:layout_width="wrap_content"
+            app:layout_column="1"
+            app:layout_gravity="fill"
+            app:layout_row="4" />
+
+        <!-- TargetSpeed -->
+
+        <LinearLayout
+            style="@style/leftColumnLayout"
+            app:layout_column="0"
+            app:layout_row="5"
+            app:layout_gravity="fill_horizontal"
+            android:orientation="vertical" >
 
             <TextView
-                app:layout_column="0"
-                app:layout_row="5"
-                style="@style/confirmValue"
-                android:text="@string/target_speed"
-                app:layout_gravity="fill_vertical|fill_horizontal" 
-               />
+                style="@style/inputLabel"
+                android:text="@string/target_speed" />
 
             <TextView
-                app:layout_column="1"
-                app:layout_row="5"
-                app:layout_gravity="fill_horizontal"
+                style="@style/measure"
+                android:text="m/s" />
+</LinearLayout>
+            <TextView
                 android:id="@+id/targetspeed"
-                style="@style/inputNumbers" />
-
-            <TextView
-                app:layout_column="2"
+                style="@style/inputNumbers"
+                app:layout_column="1"
+                app:layout_gravity="fill"
                 app:layout_row="5"
-                style="@style/measure"
-                android:text="m/s" 
-                app:layout_gravity="fill_vertical|fill_horizontal"
                 />
-    
-            <!-- SPEED WIRE INLET -->
+        
+
+        <!-- SPEED WIRE INLET -->
+
+        <LinearLayout
+            style="@style/leftColumnLayout"
+            app:layout_column="0"
+            app:layout_row="6"
+            app:layout_gravity="fill_horizontal"
+            android:orientation="vertical" >
+
             <TextView
-                app:layout_column="0"
-                app:layout_row="6"
                 style="@style/confirmValue"
-                android:text="@string/speed_wire_inlet"
-                app:layout_gravity="fill_vertical|fill_horizontal"
-               />
+                android:text="@string/speed_wire_inlet" />
 
             <TextView
-                app:layout_column="1"
-                app:layout_row="6"
-                app:layout_gravity="fill_horizontal"
-                android:id="@+id/speedwireinlet"
-                style="@style/inputNumbers" />
-
-            <TextView
-                app:layout_column="2"
-                app:layout_row="6"
                 style="@style/measure"
-                android:text="m/s" 
-                app:layout_gravity="fill_vertical|fill_horizontal"
-                />
-            
-             <!-- AVERAGE REDUCTION -->
+                android:text="m/s" />
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/speedwireinlet"
+            style="@style/inputNumbers"
+            app:layout_column="1"
+            app:layout_gravity="fill_horizontal"
+            app:layout_row="6" />
+
+        <!-- AVERAGE REDUCTION -->
+
+        <LinearLayout
+            style="@style/leftColumnLayout"
+            app:layout_column="0"
+            app:layout_row="7"
+            app:layout_gravity="fill_horizontal"
+            android:orientation="vertical" >
+
             <TextView
-                app:layout_column="0"
-                app:layout_row="7"
                 style="@style/confirmValue"
-                android:text="@string/average_reduction"
-                app:layout_gravity="fill_vertical|fill_horizontal" 
-               />
+                android:text="@string/average_reduction" />
 
             <TextView
-                app:layout_column="1"
-                app:layout_row="7"
-                app:layout_gravity="fill_horizontal"
-                android:id="@+id/averagereduction"
-                style="@style/inputNumbers" />
-
-            <TextView
-                app:layout_column="2"
-                app:layout_row="7"
                 style="@style/measure"
-                android:text="%" 
-                app:layout_gravity="fill_vertical|fill_horizontal"
-                />
-            
-             <!-- TOTAL REDUCTION -->
+                android:text="%" />
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/averagereduction"
+            style="@style/inputNumbers"
+            app:layout_column="1"
+            app:layout_gravity="fill_horizontal"
+            app:layout_row="7" />
+
+        <!-- TOTAL REDUCTION -->
+
+        <LinearLayout
+            style="@style/leftColumnLayout"
+            app:layout_column="0"
+            app:layout_row="8"
+            app:layout_gravity="fill_horizontal"
+            android:orientation="vertical" >
+
             <TextView
-                app:layout_column="0"
-                app:layout_row="8"
                 style="@style/confirmValue"
-                android:text="@string/total_reduction"
-                app:layout_gravity="fill_vertical|fill_horizontal"
-               />
+                android:text="@string/total_reduction" />
 
             <TextView
-                app:layout_column="1"
-                app:layout_row="8"
-                app:layout_gravity="fill_horizontal"
-                android:id="@+id/totalreduction"
-                style="@style/inputNumbers" />
-
-            <TextView
-                app:layout_column="2"
-                app:layout_row="8"
                 style="@style/measure"
-                android:text="%" 
-                app:layout_gravity="fill_vertical|fill_horizontal"
-                />
-      
-             <!-- INLET T/S -->
+                android:text="%" />
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/totalreduction"
+            style="@style/inputNumbers"
+            app:layout_column="1"
+            app:layout_gravity="fill_horizontal"
+            app:layout_row="8" />
+
+        <!-- INLET T/S -->
+
+        <LinearLayout
+            style="@style/leftColumnLayout"
+            app:layout_column="0"
+            app:layout_row="9"
+            app:layout_gravity="fill_horizontal"
+            android:orientation="vertical" >
+
             <TextView
-                app:layout_column="0"
-                app:layout_row="9"
                 style="@style/confirmValue"
-                android:text="@string/inlet_ts"
-                app:layout_gravity="fill" 
-               />
+                android:text="@string/inlet_ts" />
 
             <TextView
-                app:layout_column="1"
-                app:layout_row="9"
-                app:layout_gravity="fill_horizontal"
-                android:id="@+id/inletts"
-                style="@style/inputNumbers" />
-
-            <TextView
-                app:layout_column="2"
-                app:layout_row="9"
                 style="@style/measure"
-                android:text="N/mm^2" 
-                app:layout_gravity="fill"
-                />
-            
-             <!-- OUTLET T/S -->
+                android:text="N/mm^2" />
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/inletts"
+            style="@style/inputNumbers"
+            app:layout_column="1"
+            app:layout_gravity="fill_horizontal"
+            app:layout_row="9" />
+
+        <!-- OUTLET T/S -->
+
+        <LinearLayout
+            style="@style/leftColumnLayout"
+            app:layout_column="0"
+            app:layout_row="10"
+            app:layout_gravity="fill_horizontal"
+            android:orientation="vertical" >
+
             <TextView
-                app:layout_column="0"
-                app:layout_row="10"
                 style="@style/confirmValue"
-                android:text="@string/outlet_ts"
-                app:layout_gravity="fill"
-               />
+                android:text="@string/outlet_ts" />
 
             <TextView
-                app:layout_column="1"
-                app:layout_row="10"
-                app:layout_gravity="fill"
-                android:id="@+id/outletts"
-                style="@style/inputNumbers" />
-
-            <TextView
-                app:layout_column="2"
-                app:layout_row="10"
                 style="@style/measure"
-                android:text="N/mm^2" 
-                app:layout_gravity="fill"
-                />
-            
-             <android.support.v7.widget.Space
-               app:layout_column="3"
-               app:layout_row="0"
-               app:layout_rowSpan="12"
-               app:layout_gravity="fill"
-               />
+                android:text="N/mm^2" />
+        </LinearLayout>
 
-           <Button
-                    app:layout_column="1"
-                    app:layout_row="11"
-                    android:id="@+id/btnCalculate"
-                    android:ems="5"
-                    app:layout_gravity="fill_horizontal"
-                    android:text="@string/calculate" />
+        <TextView
+            android:id="@+id/outletts"
+            style="@style/inputNumbers"
+            app:layout_column="1"
+            app:layout_gravity="fill"
+            app:layout_row="10" />
 
+        <android.support.v7.widget.Space
+            app:layout_column="3"
+            app:layout_gravity="fill"
+            app:layout_row="0"
+            app:layout_rowSpan="12" />
 
-</android.support.v7.widget.GridLayout>
+        <Button
+            android:id="@+id/btnCalculate"
+            app:layout_column="1"
+            app:layout_gravity="fill_horizontal"
+            app:layout_row="11"
+            android:ems="5"
+            android:text="@string/calculate" />
+    </android.support.v7.widget.GridLayout>
+
 </ScrollView>
