--- a/res/layout/steel_drawing_newstyle.xml
+++ b/res/layout/steel_drawing_newstyle.xml
@@ -28,7 +28,9 @@
         style="@style/leftColumnLayout"
         app:layout_column="0"
         app:layout_row="1"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        app:layout_gravity="fill_horizontal"
+        >
 
         <TextView
             style="@style/inputLabel"
@@ -58,7 +60,9 @@
         style="@style/leftColumnLayout"
         app:layout_column="0"
         app:layout_row="2"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        app:layout_gravity="fill_horizontal"
+        >
       <TextView
          style="@style/inputLabel"
          android:text="@string/outlet"
@@ -85,7 +89,9 @@
          style="@style/leftColumnLayout"
          app:layout_column="0"
          app:layout_row="3"
-         android:orientation="vertical">
+         android:orientation="vertical"
+         app:layout_gravity="fill_horizontal"
+         >
            
     <TextView
          style="@style/inputLabel"
@@ -110,7 +116,9 @@
          style="@style/leftColumnLayout"
          app:layout_column="0"
          app:layout_row="4"
-         android:orientation="vertical">
+         android:orientation="vertical"
+         app:layout_gravity="fill_horizontal"
+         >
       
       <TextView
                style="@style/inputLabel"
@@ -136,7 +144,9 @@
          style="@style/leftColumnLayout"
          app:layout_column="0"
          app:layout_row="5"
-         android:orientation="vertical">
+         android:orientation="vertical"
+         app:layout_gravity="fill_horizontal"
+         >
        
          <TextView
                 style="@style/inputLabel"
