--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,4 +1,5 @@
-<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
+<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
+    >
 
     <!--
         Base application theme, dependent on API level. This theme is replaced
@@ -27,10 +28,11 @@
     
     
     
-    <style name="leftColumnLayout">
+    <style name="leftColumnLayout" >
          <item name="android:background">@color/Blue</item>
-         <item name="android:layout_width">200dp</item>
+         <item name="android:layout_width">wrap_content</item>
          <item name="android:layout_height">wrap_content</item>
+         
     </style>
     
     <style name="inputLabel"  parent="@android:style/TextAppearance.Medium">
