--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -15,6 +15,11 @@
 
     <!-- Application theme. -->
     <style name="AppTheme" parent="AppBaseTheme">
+        <item name="android:actionBarStyle">@style/ActionBar</item>
+    </style>
+    
+    <style name="ActionBar" parent="@android:style/Widget.Holo.Light.ActionBar">
+        <item name="android:background">@color/GreyDark</item>
     </style>
     
      <style name="form_layout">
