--- a/res/layout/simple_spinner_align_center.xml
+++ b/res/layout/simple_spinner_align_center.xml
@@ -6,4 +6,5 @@
     android:layout_height="?android:attr/listPreferredItemHeight"
     android:ellipsize="marquee" 
     android:gravity="center"
+    android:textSize="20dp"
     />
